{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 499,
  "lineage": "523dfaac-a6ef-7de3-b946-2151291d5b6a",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:522814728660:instance/i-0f3160127bac5ca88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3160127bac5ca88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "siva",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c47f6b401f349abe",
            "private_dns": "ip-10-1-1-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.204",
            "public_dns": "ec2-54-85-102-254.compute-1.amazonaws.com",
            "public_ip": "54.85.102.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-097525e6b64ab8216",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041160def9dd778f4",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-bastion",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-bastion",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06826817f53685f01"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "module.bastion_sg.aws_security_group.example",
            "module.rds.aws_db_instance.default",
            "module.rds.aws_route53_record.www",
            "module.rds_sg.aws_security_group.example",
            "module.vpc.aws_db_subnet_group.default",
            "module.vpc.aws_subnet.db_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:security-group/sg-06826817f53685f01",
            "description": "Bastion SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06826817f53685f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "development-carvo-Bastion",
            "name_prefix": "",
            "owner_id": "522814728660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-Bastion",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-Bastion",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.internal-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:security-group/sg-0b0b06fa77efc2979",
            "description": "RDS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0b06fa77efc2979",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "This rule allows all traffic from 3306 from Backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d442a473eb6adc8d"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "This rule allows all traffic from 3306 from VPN",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084658ebcc527b729"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "This rule allows all traffic from 3306 from bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06826817f53685f01"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "development-carvo-RDS",
            "name_prefix": "",
            "owner_id": "522814728660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-RDS",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-RDS",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:internet-gateway/igw-0ac4cae2e97059e20",
            "id": "igw-0ac4cae2e97059e20",
            "owner_id": "522814728660",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-igw",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-igw",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "db_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:subnet/subnet-0a576dac1df7c3e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a576dac1df7c3e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-db-subnet-1a",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-db-subnet-1a",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:subnet/subnet-05cd5bcacd7e14287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cd5bcacd7e14287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-db-subnet-1b",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-db-subnet-1b",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:subnet/subnet-041160def9dd778f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041160def9dd778f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-public-subnet-1a",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-public-subnet-1a",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:subnet/subnet-0ff4ab88eb3d1b6ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4ab88eb3d1b6ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-public-subnet-1b",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-public-subnet-1b",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "vpc_id": "vpc-0d275ea6d9425598f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522814728660:vpc/vpc-0d275ea6d9425598f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08af81bd212eed192",
            "default_route_table_id": "rtb-05262cf4ab7af5349",
            "default_security_group_id": "sg-09430cb7cbef10f3d",
            "dhcp_options_id": "dopt-0fc13e38c8eab95d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d275ea6d9425598f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05262cf4ab7af5349",
            "owner_id": "522814728660",
            "tags": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-vpc",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            },
            "tags_all": {
              "Environment": "development",
              "Monitoring": "true",
              "Name": "development-carvo-vpc",
              "Owner": "konka",
              "Project": "carvo",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}